添加随机获取鸡汤文的编码修改